# Rag_AI_Agent

./: README.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/: config.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/51255ef3-122a-4121-82a9-1b02c81eb49c/: segment.json
qdrant_storage/collections/docs/0/segments/6b18f616-3928-49aa-8bc9-fdf97b8e1119/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/6b18f616-3928-49aa-8bc9-fdf97b8e1119/vector_storage/vectors/: config.json
qdrant_storage/collections/docs/0/segments/f0ee432d-2d28-445d-9346-8e2af7143b3d/: segment.json
rag_ai_app/: .env  custom_types.py  data_loader.py  data_loader.py.archive  main.py  pyproject.toml  vector_db.py
